# Bookstore

./: Dockerfile  README.md  docker-compose.yml  env.dev  heroku.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  heroku-deploy.yml  pull-request.yml
Bookstore/: settings.py  urls.py
Order/: urls.py
Order/factories/: __init__.py  order_factory.py  user_factory.py
Order/migrations/: 0001_initial.py
Order/models/: order.py
Order/serializers/: order_serializer.py
Order/tests/test_serializers/: test_order_serializer.py
Order/tests/test_viewsets/: test_order_viewset.py
Order/viewsets/: order_viewset.py
Product/: urls.py
Product/factories/: __init__.py  category_factory.py  product_factory.py
Product/migrations/: 0001_initial.py
Product/models/: category.py  product.py
Product/serializers/: category_serializer.py  product_serializer.py
Product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
Product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
Product/viewsets/: category_viewset.py  product_viewset.py
